--- a/templates/dntu_dashboard.html
+++ b/templates/dntu_dashboard.html
@@ -35,6 +35,7 @@
         <div class="header-links">
             <a href="{{ url_for('tamung_form') }}">Tạo đề nghị mới</a> |
             <a href="{{ url_for('tamung_list') }}">Xem tất cả đề nghị</a> |
+            <a href="{{ url_for('change_password') }}">Đổi mật khẩu</a> |
             <a href="{{ url_for('logout') }}" class="logout">Đăng xuất</a>
         </div>
     </div>
